--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
-  "name": "ai-content-tracker",
+  "name": "ai-content-marketplace",
   "version": "1.0.0",
-  "description": "AI Content Payment & Ownership Tracker",
+  "description": "AI Content Payment & Ownership Tracker - X402 + GMPayer + ERC-8004 Integration",
   "main": "src/server.js",
+  "homepage": "https://github.com/yourusername/ai-content-marketplace#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/ai-content-marketplace.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/ai-content-marketplace/issues"
+  },
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
@@ -20,7 +28,24 @@
     "nodemon": "^3.0.1",
     "jest": "^29.7.0"
   },
-  "keywords": ["x402", "gmpayer", "erc-8004", "ai", "ownership"],
-  "author": "Your Name",
-  "license": "MIT"
+  "keywords": [
+    "x402",
+    "gmpayer", 
+    "erc-8004",
+    "ai",
+    "ownership",
+    "marketplace",
+    "blockchain",
+    "orchestration",
+    "payment",
+    "content-generation",
+    "web3",
+    "demo"
+  ],
+  "author": "Your Name <your.email@example.com>",
+  "license": "MIT",
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  }
 }
