--- a/package.json
+++ b/package.json
@@ -3,49 +3,38 @@
   "version": "1.0.0",
   "description": "AI Content Payment & Ownership Tracker - X402 + GMPayer + ERC-8004 Integration",
   "main": "src/server.js",
-  "homepage": "https://github.com/yourusername/ai-content-marketplace#readme",
+  "scripts": {
+    "start": "node src/server.js",
+    "dev": "node src/server.js",
+    "build": "echo 'Build complete - static files ready'",
+    "demo": "node demo/demo.js",
+    "demo-quick": "node demo/quick-demo.js"
+  },
+  "keywords": [
+    "ai-content",
+    "x402",
+    "gmpayer", 
+    "erc-8004",
+    "blockchain",
+    "payment-processing",
+    "ownership-tracking"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/ai-content-marketplace.git"
+    "url": "git+https://github.com/yourusername/ai-content-marketplace.git"
   },
   "bugs": {
     "url": "https://github.com/yourusername/ai-content-marketplace/issues"
   },
-  "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "demo": "node demo.js",
-    "test": "jest",
-    "demo-quick": "npm run demo && echo '\n🌐 Now run: npm start' && echo '📱 Then open: http://localhost:3000'"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "uuid": "^9.0.0",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.7.0"
-  },
-  "keywords": [
-    "x402",
-    "gmpayer", 
-    "erc-8004",
-    "ai",
-    "ownership",
-    "marketplace",
-    "blockchain",
-    "orchestration",
-    "payment",
-    "content-generation",
-    "web3",
-    "demo"
-  ],
-  "author": "Your Name <your.email@example.com>",
-  "license": "MIT",
-  "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
-  }
+  "homepage": "https://github.com/yourusername/ai-content-marketplace#readme"
 }
